Добавлено приложение excel_exporter

--- a/База_рекламаций/reclamationhub/templates/base.html
+++ b/База_рекламаций/reclamationhub/templates/base.html
@@ -83,7 +83,7 @@
                         <a class="nav-link fw-bold text-white" href="{% url 'admin:index' %}">Панель редактирования</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link fw-bold text-white" href="{% url 'export_excel' %}">
+                        <a class="nav-link fw-bold text-white" href="{% url 'utils:excel_exporter' %}">
                             <i class="fas fa-file-excel"></i> Экспорт в Excel
                         </a>
                     </li>
