Обновление модели investigations

--- a/База_рекламаций/reclamationhub/templates/admin/group_form_base.html
+++ b/База_рекламаций/reclamationhub/templates/admin/group_form_base.html
@@ -87,7 +87,7 @@
 
 {% block content %}
 <div class="custom-form">
-    <form method="post">
+    <form method="post" enctype="multipart/form-data">
         {% csrf_token %}
 
         <!-- Вывод ошибок формы -->
