--- a/База_рекламаций/reclamationhub/utils/templates/utils/excel_exporter.html
+++ b/База_рекламаций/reclamationhub/utils/templates/utils/excel_exporter.html
@@ -73,7 +73,8 @@
                                                     value="{{ field.key }}"
                                                     id="field_{{ field.key|slugify }}"
                                                     data-group="{{ group_name }}">
-                                                <label class="form-check-label" for="field_{{ field.key|slugify }}">
+                                                <label class="form-check-label small" for="field_{{ field.key|slugify }}"> <!-- мелкий шрифт -->
+                                           <!-- <label class="form-check-label" for="field_{{ field.key|slugify }}">  крупный шрифт -->
                                                     {{ field.header }}
                                                 </label>
                                             </div>
