--- a/База_рекламаций/reclamationhub/utils/templates/utils/excel_exporter.html
+++ b/База_рекламаций/reclamationhub/utils/templates/utils/excel_exporter.html
@@ -87,7 +87,7 @@
                                 <div class="alert alert-light border border-success mb-4" role="alert">
                                     <div class="d-flex align-items-center">
                                         <span>
-                                            ✅ Для экспорта по выбранным столбцам нажмите ниже справа кнопку
+                                            ✅ Для экспорта по выбранным столбцам нажмите справа кнопку
                                             <strong class="text-success">"Экспортировать в Excel"</strong>
                                         </span>
                                     </div>
