Обновление приложений analytics и reports

--- a/База_рекламаций/reclamationhub/analytics/templates/analytics/analytic.html
+++ b/База_рекламаций/reclamationhub/analytics/templates/analytics/analytic.html
@@ -50,9 +50,9 @@
         <div class="col-lg-6 col-md-6 col-sm-12 mb-3">
             <div class="card h-100">
                 <div class="card-body">
-                    <h5 class="card-title">📊 Анализ по виновникам дефектов</h5>
-                    <p class="card-text">Количественный анализ по виновникам дефектов за отчетный период и сохранение в файл</p>
-                    <a href="{% url 'analytics:culprits_defect' %}" class="btn btn-primary">Открыть модуль</a>
+                    <h5 class="card-title">📊 Количественный анализ дефектности по потребителю</h5>
+                    <p class="card-text">Информация о дефектности по конкретному потребителю с указанием дефектов и причин с сохранением в файл</p>
+                    <a href="{% url 'analytics:consumer_defect' %}" class="btn btn-primary">Открыть модуль</a>
                 </div>
             </div>
         </div>
