--- a/База_рекламаций/reclamationhub/templates/base.html
+++ b/База_рекламаций/reclamationhub/templates/base.html
@@ -60,6 +60,7 @@
                             <li><a class="dropdown-item" href="{% url 'reports:enquiry_period' %}">Справка по количеству сообщений</a></li>
                             <li><a class="dropdown-item" href="{% url 'reports:length_study' %}">Длительность исследования рекламаций</a></li>
                             <li><a class="dropdown-item" href="{% url 'reports:accept_defect' %}">Количество признанных рекламаций</a></li>
+                            <li><a class="dropdown-item" href="{% url 'reports:culprits_defect' %}">Справка по виновникам дефектов</a></li>
                             <li><a class="dropdown-item" href="{% url 'reports:db_search' %}">Поиск по базе рекламаций</a></li>
                             <li><a class="dropdown-item" href="{% url 'reports:date_pretence' %}">Даты уведомления по рекламациям</a></li>
                         </ul>
@@ -74,7 +75,7 @@
                             <li><a class="dropdown-item" href="{% url 'analytics:mileage_chart' %}">Диаграмма по пробегу</a></li>
                             <li><a class="dropdown-item" href="{% url 'analytics:combined_chart' %}">Диаграммы по датам</a></li>
                             <li><a class="dropdown-item" href="{% url 'analytics:product_defect' %}">Анализ дефектности по изделию</a></li>
-                            <li><a class="dropdown-item" href="{% url 'analytics:culprits_defect' %}">Анализ по виновникам дефектов</a></li>
+                            <li><a class="dropdown-item" href="{% url 'analytics:consumer_defect' %}">Анализ дефектности по потребителю</a></li>
                         </ul>
                     </li>
                 </ul>
