--- a/База_рекламаций/reclamationhub/analytics/templates/analytics/consumer_defect.html
+++ b/База_рекламаций/reclamationhub/analytics/templates/analytics/consumer_defect.html
@@ -25,7 +25,7 @@
                 <div class="card-body text-center">
                     <h3 class="text-info">🚧 {{ status }}</h3>
                     <p>Модуль "{{ module_name }}" находится в стадии разработки</p>
-                    <p>Здесь будет информация по количественному анализу по виновникам дефектов за отчетный период с возможностью сохранения в файл</p>
+                    <p>Здесь будет информация по количественному анализу дефектности по потребителям за отчетный период с возможностью сохранения в файл</p>
 
                     <a href="{% url 'analytics:analytic' %}" class="btn btn-secondary">
                         ← Вернуться к аналитике
