--- a/База_рекламаций/reclamationhub/reports/templates/reports/culprits_defect.html
+++ b/База_рекламаций/reclamationhub/reports/templates/reports/culprits_defect.html
@@ -25,10 +25,10 @@
                 <div class="card-body text-center">
                     <h3 class="text-info">🚧 {{ status }}</h3>
                     <p>Модуль "{{ module_name }}" находится в стадии разработки</p>
-                    <p>Здесь будет информация по рекламациям, по которым отсутствуют акты исследования</p>
+                    <p>Здесь будет информация по виновникам дефектов за отчетный период с возможностью сохранения в файл</p>
 
                     <a href="{% url 'reports:references' %}" class="btn btn-secondary">
-                        ← Вернуться к аналитике
+                        ← Вернуться к отчетам
                     </a>
                 </div>
             </div>
