--- a/База_рекламаций/reclamationhub/reports/templates/reports/references.html
+++ b/База_рекламаций/reclamationhub/reports/templates/reports/references.html
@@ -24,7 +24,7 @@
             <div class="card h-100">
                 <div class="card-body">
                     <h5 class="card-title">📊 Справка по количеству поступивших сообщений</h5>
-                    <p class="card-text">Cправка к совещанию по качеству по количеству поступивших сообщений за период времени и сохранение в файл Excel</p>
+                    <p class="card-text">Информация к совещанию по качеству по количеству поступивших сообщений за период времени с сохранением в файл Excel</p>
                     <a href="{% url 'reports:enquiry_period' %}" class="btn btn-primary">Открыть модуль</a>
                 </div>
             </div>
@@ -32,8 +32,8 @@
         <div class="col-lg-6 col-md-6 col-sm-12 mb-3">
             <div class="card h-100">
                 <div class="card-body">
-                    <h5 class="card-title">📊 Количество признанных/непризнанных рекламаций</h5>
-                    <p class="card-text">Отчет по количеству признанных/непризнанных рекламаций по выбранным месяцам или накопительным итогом с начала года и сохранение в файл</p>
+                    <h5 class="card-title">📊 Отчет по количеству признанных рекламаций</h5>
+                    <p class="card-text">Информация по количеству признанных/непризнанных рекламаций по выбранным месяцам или накопительным итогом с сохранением в файл</p>
                     <a href="{% url 'reports:accept_defect' %}" class="btn btn-primary">Открыть модуль</a>
                 </div>
             </div>
@@ -41,8 +41,8 @@
         <div class="col-lg-6 col-md-6 col-sm-12 mb-3">
             <div class="card h-100">
                 <div class="card-body">
-                    <h5 class="card-title">📊 Длительность исследования рекламаций</h5>
-                    <p class="card-text">Информация по длительности исследований рекламаций для показателей премирования и сохранение в файл</p>
+                    <h5 class="card-title">📊 Справка по длительности исследования рекламаций</h5>
+                    <p class="card-text">Информация по длительности исследований рекламаций для показателей премирования с сохранением в файл</p>
                     <a href="{% url 'reports:length_study' %}" class="btn btn-primary">Открыть модуль</a>
                 </div>
             </div>
@@ -50,9 +50,9 @@
         <div class="col-lg-6 col-md-6 col-sm-12 mb-3">
             <div class="card h-100">
                 <div class="card-body">
-                    <h5 class="card-title">📊 Незакрытые акты рекламаций</h5>
-                    <p class="card-text">Перечень рекламационных изделий по АСП и ГП, поступивших на завод, по которым нет актов исследования и сохранение в файл</p>
-                    <a href="{% url 'reports:not_acts' %}" class="btn btn-primary">Открыть модуль</a>
+                    <h5 class="card-title">📊 Справка по виновникам дефектов</h5>
+                    <p class="card-text">Информация по виновникам дефектов за выбранный период для использования при оценке дефектности бригад с сохранением в файл</p>
+                    <a href="{% url 'reports:culprits_defect' %}" class="btn btn-primary">Открыть модуль</a>
                 </div>
             </div>
         </div>
