Добавлено поле Претензии в админки

--- a/База_рекламаций/reclamationhub/templates/admin/claim_changelist.html
+++ b/База_рекламаций/reclamationhub/templates/admin/claim_changelist.html
@@ -1,7 +1,4 @@
-<!--
- Дочерний шаблон страницы списка претензий.
- В шаблон добавили кнопку для перехода на форму групповой накладной и экспорта в Excel
--->
+<!-- Дочерний шаблон страницы списка претензий -->
 
 {% extends 'admin/change_list.html' %}
 {% load i18n admin_urls %}
