--- a/База_рекламаций/reclamationhub/templates/base.html
+++ b/База_рекламаций/reclamationhub/templates/base.html
@@ -85,7 +85,7 @@
                     </li>
                     <li class="nav-item">
                         <a class="nav-link fw-bold text-white" href="{% url 'utils:excel_exporter' %}">
-                            <i class="fas fa-file-excel"></i> Экспорт в Excel
+                            <i class="fas fa-file-excel"></i> Экспорт Excel
                         </a>
                     </li>
                 </ul>
