--- a/База_рекламаций/reclamationhub/templates/base.html
+++ b/База_рекламаций/reclamationhub/templates/base.html
@@ -66,7 +66,7 @@
                         </ul>
                     </li>
 
-                    <!-- Выпадающее меню для "Аналитика" -->
+                    <!-- Выпадающее меню для "Аналитика"
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle text-white" href="{% url 'analytics:analytic' %}">
                             Аналитика
@@ -78,7 +78,29 @@
                             <li><a class="dropdown-item" href="{% url 'analytics:consumer_defect' %}">Анализ дефектности по потребителю</a></li>
                         </ul>
                     </li>
+                    -->
+                    <!-- Выпадающее меню для "Аналитика" -->
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle text-white" href="{% url 'analytics:analytic' %}">
+                            Аналитика
+                        </a>
+                        <ul class="dropdown-menu position-absolute hover-dropdown">
+                            <!-- Аналитика рекламаций -->
+                            <li><h6 class="dropdown-header">Рекламации:</h6></li>
+                            <li><a class="dropdown-item" href="{% url 'analytics:mileage_chart' %}">Диаграмма по пробегу</a></li>
+                            <li><a class="dropdown-item" href="{% url 'analytics:combined_chart' %}">Диаграммы по датам</a></li>
+                            <li><a class="dropdown-item" href="{% url 'analytics:product_defect' %}">Анализ дефектности по изделию</a></li>
+                            <li><a class="dropdown-item" href="{% url 'analytics:consumer_defect' %}">Анализ дефектности по потребителю</a></li>
+
+                            <li><hr class="dropdown-divider"></li>
+
+                            <!-- Аналитика претензий -->
+                            <li><h6 class="dropdown-header">Претензии:</h6></li>
+                            <li><a class="dropdown-item" href="{% url 'claims:dashboard' %}">Dashboard претензий</a></li>
+                        </ul>
+                    </li>
                 </ul>
+
                 <ul class="navbar-nav">
                     <li class="nav-item">
                         <a class="nav-link fw-bold text-white" href="{% url 'admin:index' %}">Панель редактирования</a>
