Обновление БД и модели claims

--- a/База_рекламаций/reclamationhub/analytics/templates/analytics/analytic.html
+++ b/База_рекламаций/reclamationhub/analytics/templates/analytics/analytic.html
@@ -56,6 +56,15 @@
                 </div>
             </div>
         </div>
+        <div class="col-lg-6 col-md-6 col-sm-12 mb-3">
+            <div class="card h-100">
+                <div class="card-body">
+                    <h5 class="card-title">📊 Количественный и финансовый анализ по претензиям</h5>
+                    <p class="card-text">Информация о количестве претензий и суммах, выставленных к возмещению и признанных после рассмотрения</p>
+                    <a href="{% url 'claims:dashboard' %}" class="btn btn-primary">Открыть приложение</a>
+                </div>
+            </div>
+        </div>
     </div>
 </div>
 {% endblock %}
