--- a/База_рекламаций/reclamationhub/claims/templates/claims/dashboard.html
+++ b/База_рекламаций/reclamationhub/claims/templates/claims/dashboard.html
@@ -174,7 +174,7 @@
         <div class="col-12">
             <div class="card">
                 <div class="card-header">
-                    <h5>TOP-5 потребителей</h5>
+                    <h5>По потребителям</h5>
                 </div>
                 <div class="card-body">
                     <div class="table-responsive">
